js/js.translator/testData/incremental/invalidation/topLevelSideEffectMoveBetweenFiles/lib1/first.0.kt
val sideEffectMarker = run {
    result = "A0"
    0
}
